@@ -289,3 +289,37 @@ State: 0 [0] 0 {0}
 State: 1 [0] 1 [0] 0
 --END--
 EOF
+
+autfilt -S > out <<EOF
+HOA: v1
+States: 2
+Start: 0
+AP: 2 "a" "b"
+acc-name: co-Buchi
+Acceptance: 1 Fin(0)
+properties: trans-labels explicit-labels trans-acc
+--BODY--
+State: 0
+[0] 0 {0}
+[1] 1
+State: 1
+[1] 1 {0}
+--END--
+EOF
+cat >exp <<EOF
+HOA: v1
+States: 2
+Start: 0
+AP: 2 "a" "b"
+acc-name: co-Buchi
+Acceptance: 1 Fin(0)
+properties: trans-labels explicit-labels state-acc colored
+--BODY--
+State: 0 {0}
+[0] 0
+[1] 1
+State: 1 {0}
+[1] 1
+--END--
+EOF
+diff out exp
